# nanoLLM_gpt

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TEST_SUMMARY.md  docker-compose.yml  handbook.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  sample_data.txt  setup.py
config/: server_config.yaml  train_config.yaml
data/custom/: meta.pkl
data/example/: meta.pkl
examples/: basic_usage.py
nanoLLM_gpt/: __init__.py  config.py  generate.py  model.py  server.py  train.py
nanoLLM_gpt/templates/: index.html
nanoLLM_gpt/utils/: __init__.py  data_utils.py  inference.py  model_loader.py  training_utils.py
tests/: __init__.py  conftest.py  test_comprehensive.py  test_edge_cases.py  test_model_loader.py  test_resume_training.py  test_training_ddp.py
tests/integration_tests/: README.md  __init__.py  test_checkpoint_loading.py  test_config_functionality.py  test_huggingface_loading.py  test_resume_integration.py
